--- a/style.css
+++ b/style.css
@@ -49,7 +49,11 @@ color: white;
 
 h4{
 
-    text-align: center ;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    text-align: center;
     color: red;
 }
 
@@ -76,3 +80,4 @@ padding: 30px;
 text-size-adjust: 100px;
 font-size: x-large;
 }
+
